force-app/main/default/objects/CampaignFeedback__c/CampaignFeedback__c.object-meta.xml
<CustomObject>
    <description>Authority to leave - new project capture merchant&apos;s permission to leave delivered item to customers postal address.

This custom object relates to Organisation Object with lookups to relative fields</description>
    <label>Campaign Feedback</label>
    <nameField>
        <displayFormat>ATL-{00000}</displayFormat>
        <label>Campaign ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Campaign Feedback</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>