force-app/main/default/objects/CampaignFeedback__c/fields/BusinessOpportunityTimeline__c.field-meta.xml
<CustomField>
    <fullName>BusinessOpportunityTimeline__c</fullName>
    <description>When do you think the new opportunity will realise?</description>
    <inlineHelpText>When do you think the new opportunity will realise?</inlineHelpText>
    <label>Business Opportunity Timeline</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1-3 months</fullName>
            </value>
            <value>
                <fullName>3-6 months</fullName>
            </value>
            <value>
                <fullName>6-12 months</fullName>
            </value>
            <value>
                <fullName>&gt;12 months</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>