force-app/main/default/objects/CampaignFeedback__c/fields/CampaignName__c.field-meta.xml
<CustomField>
    <fullName>CampaignName__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Enter Campaign name or lookup an existing Campaign name</description>
    <inlineHelpText>Enter Campaign name or lookup an existing Campaign name.</inlineHelpText>
    <label>Campaign Name</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Campaign Feedback</relationshipLabel>
    <relationshipName>Campaign_Feedback</relationshipName>
    <type>Lookup</type>
</CustomField>