force-app/main/default/objects/CampaignFeedback__c/fields/ConversationDueDate__c.field-meta.xml
<CustomField>
    <fullName>ConversationDueDate__c</fullName>
    <description>Date conversation is to be had by</description>
    <inlineHelpText>Date conversation is to be had by</inlineHelpText>
    <label>Conversation Due Date</label>
    <type>Date</type>
</CustomField>