force-app/main/default/objects/CampaignFeedback__c/fields/Haveyoucommunicatedthedeadlinewith__c.field-meta.xml
<CustomField>
    <fullName>Haveyoucommunicatedthedeadlinewith__c</fullName>
    <description>Have you communicated the deadline with your customer?</description>
    <inlineHelpText>Have you communicated the deadline with your customer?</inlineHelpText>
    <label>Advise customer of the deadline?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>