force-app/main/default/objects/CampaignFeedback__c/fields/Keydriverstoaccept__c.field-meta.xml
<CustomField>
    <fullName>Keydriverstoaccept__c</fullName>
    <label>Key drivers to accept</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Willcustomertakeupservice__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Product Pricepoint</fullName>
            </value>
            <value>
                <fullName>Enhanced Service Levels</fullName>
            </value>
            <value>
                <fullName>Reliability</fullName>
            </value>
            <value>
                <fullName>Flexibility</fullName>
            </value>
            <value>
                <fullName>Solves a Paint Point</fullName>
            </value>
            <value>
                <fullName>Reduced Costs</fullName>
            </value>
            <value>
                <fullName>Customer Experience</fullName>
            </value>
            <value>
                <fullName>Trusted Provider</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>