force-app/main/default/objects/CampaignFeedback__c/fields/MerchantKeyDriverstoDecline__c.field-meta.xml
<CustomField>
    <fullName>MerchantKeyDriverstoDecline__c</fullName>
    <description>Factors that influenced customer decision to decline.</description>
    <inlineHelpText>Factors that influenced customer decision to decline</inlineHelpText>
    <label>Merchant Key Drivers to Decline</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>MerchantadoptionofCampaign__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Price Uncompetitve</fullName>
            </value>
            <value>
                <fullName>Unsatisfactory Service Levels</fullName>
            </value>
            <value>
                <fullName>Timeframe to Implement</fullName>
            </value>
            <value>
                <fullName>Merchant Cost to Implement</fullName>
            </value>
            <value>
                <fullName>Operational Concerns/Limitations</fullName>
            </value>
            <value>
                <fullName>IT Complexity</fullName>
            </value>
            <value>
                <fullName>Using a Competitor Already</fullName>
            </value>
            <value>
                <fullName>Don’t see value in offer</fullName>
            </value>
            <value>
                <fullName>Nil - Merchant has Accepted</fullName>
                <isActive>false</isActive>
                <label>Nil - Merchant has Accepted</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>