force-app/main/default/objects/CampaignFeedback__c/fields/Phasedcustomergrouptargeted__c.field-meta.xml
<CustomField>
    <fullName>Phasedcustomergrouptargeted__c</fullName>
    <description>Phased customer group targeted</description>
    <inlineHelpText>Phased customer group targeted</inlineHelpText>
    <label>Customer Group</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>