force-app/main/default/objects/CampaignFeedback__c/fields/RiskofmigrationtoSODAlwaysRequired__c.field-meta.xml
<CustomField>
    <fullName>RiskofmigrationtoSODAlwaysRequired__c</fullName>
    <description>Is there risk of migration to another AP/ST product.?</description>
    <inlineHelpText>Is there risk of migration to another AP/ST product?</inlineHelpText>
    <label>Risk of migration to SOD Always Required</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>