force-app/main/default/objects/CampaignFeedback__c/fields/Selling_on_any_other_marketplace__c.field-meta.xml
<CustomField>
    <fullName>Selling_on_any_other_marketplace__c</fullName>
    <inlineHelpText>If &apos;Yes - Other&apos; please idenfify marketplace in additional comments</inlineHelpText>
    <label>Selling on any other marketplace?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes - Myer Marketplace</fullName>
            </value>
            <value>
                <fullName>Yes - eBay</fullName>
            </value>
            <value>
                <fullName>Yes - Other</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>