force-app/main/default/objects/CampaignFeedback__c/fields/TotalVolume__c.field-meta.xml
<CustomField>
    <fullName>TotalVolume__c</fullName>
    <description>TotalVolume.</description>
    <label>Total Volume</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>