force-app/main/default/objects/CampaignFeedback__c/fields/Typeofgoods__c.field-meta.xml
<CustomField>
    <fullName>Typeofgoods__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Type of goods.</description>
    <inlineHelpText>Type of goods</inlineHelpText>
    <label>Type of goods</label>
    <type>Checkbox</type>
</CustomField>