force-app/main/default/objects/CampaignFeedback__c/fields/Valueofgoods__c.field-meta.xml
<CustomField>
    <fullName>Valueofgoods__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Value of goods.</description>
    <inlineHelpText>Value of goods</inlineHelpText>
    <label>Value of goods</label>
    <type>Checkbox</type>
</CustomField>