force-app/main/default/objects/CampaignFeedback__c/fields/Whatwaspositiveabouttheexperience__c.field-meta.xml
<CustomField>
    <fullName>Whatwaspositiveabouttheexperience__c</fullName>
    <description>Factors that influenced customer to be satisfied or not with AP performance</description>
    <inlineHelpText>Factors that influenced customer to be satisfied or not with AP performance</inlineHelpText>
    <label>What was positive about the experience?</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>If Negative – Not Applicable</fullName>
            </value>
            <value>
                <fullName>Delivery Performance</fullName>
            </value>
            <value>
                <fullName>Merchant Support/Responsiveness</fullName>
            </value>
            <value>
                <fullName>Reliability</fullName>
            </value>
            <value>
                <fullName>Operational - Service Levels</fullName>
            </value>
            <value>
                <fullName>Operational - Visibility &amp; Tracking</fullName>
            </value>
            <value>
                <fullName>Operational - Supply of ULD&apos;s</fullName>
            </value>
            <value>
                <fullName>Customer Experience</fullName>
            </value>
            <value>
                <fullName>Operational - Transport/Collections</fullName>
            </value>
            <value>
                <fullName>Service - Issue Resolution/Customer Service</fullName>
            </value>
            <value>
                <fullName>Trusted Provider</fullName>
            </value>
            <value>
                <fullName>Pricing – Market Relevant (good value)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>