force-app/main/default/objects/CampaignFeedback__c/recordTypes/Amazon.recordType-meta.xml
<RecordType>
    <fullName>Amazon</fullName>
    <active>true</active>
    <description>Amazon</description>
    <label>Amazon</label>
</RecordType>