force-app/main/default/objects/CampaignFeedback__c/recordTypes/API_Migration_Integrated.recordType-meta.xml
<RecordType>
    <fullName>API_Migration_Integrated</fullName>
    <active>true</active>
    <description>API Migration - Large Integrated Campaign</description>
    <label>API Migration - Integrated</label>
</RecordType>