force-app/main/default/objects/CampaignFeedback__c/recordTypes/API_Migration_Mid_Markets.recordType-meta.xml
<RecordType>
    <fullName>API_Migration_Mid_Markets</fullName>
    <active>true</active>
    <description>API Migration Mid-Markets</description>
    <label>API Migration Mid-Markets</label>
</RecordType>