force-app/main/default/objects/CampaignFeedback__c/recordTypes/Authority_To_Leave.recordType-meta.xml
<RecordType>
    <fullName>Authority_To_Leave</fullName>
    <active>true</active>
    <description>Authority To Leave.</description>
    <label>Authority To Leave</label>
</RecordType>