force-app/main/default/objects/CampaignFeedback__c/recordTypes/Bank_Post.recordType-meta.xml
<RecordType>
    <fullName>Bank_Post</fullName>
    <active>true</active>
    <description>Bank@Post</description>
    <label>Bank@Post</label>
</RecordType>