force-app/main/default/objects/CampaignFeedback__c/recordTypes/Delivery_Choice.recordType-meta.xml
<RecordType>
    <fullName>Delivery_Choice</fullName>
    <active>true</active>
    <description>Delivery Choice</description>
    <label>Delivery Choice</label>
</RecordType>