force-app/main/default/objects/CampaignFeedback__c/recordTypes/General.recordType-meta.xml
<RecordType>
    <fullName>General</fullName>
    <active>true</active>
    <description>General record type for general purpose.</description>
    <label>General</label>
</RecordType>