force-app/main/default/objects/CampaignFeedback__c/recordTypes/Growth_Campaign.recordType-meta.xml
<RecordType>
    <fullName>Growth_Campaign</fullName>
    <active>true</active>
    <description>This program is to drive revenue via cross/up-sell relevant products to customers. Customers will be contacted with a DM / eDM / direct call from their Account Managers. Account Managers will be armed with a Playbook to support the conversation.</description>
    <label>Growth Campaign</label>
</RecordType>