force-app/main/default/objects/CampaignFeedback__c/recordTypes/Major_Customer_Streaming.recordType-meta.xml
<RecordType>
    <fullName>Major_Customer_Streaming</fullName>
    <active>true</active>
    <description>Major Customer Streaming.</description>
    <label>Major Customer Streaming</label>
</RecordType>