force-app/main/default/objects/CampaignFeedback__c/recordTypes/Police_Check.recordType-meta.xml
<RecordType>
    <fullName>Police_Check</fullName>
    <active>true</active>
    <description>Police Check</description>
    <label>Police Check</label>
</RecordType>