force-app/main/default/objects/CampaignFeedback__c/recordTypes/Retention_Check_In.recordType-meta.xml
<RecordType>
    <fullName>Retention_Check_In</fullName>
    <active>true</active>
    <description>Retention - Check In</description>
    <label>Retention - Check In</label>
</RecordType>