force-app/main/default/objects/CampaignFeedback__c/recordTypes/Retention_downtrade.recordType-meta.xml
<RecordType>
    <fullName>Retention_downtrade</fullName>
    <active>true</active>
    <description>Retention - DownTrade</description>
    <label>Retention - DownTrade</label>
</RecordType>