force-app/main/default/objects/CampaignFeedback__c/recordTypes/Voice_of_Customer.recordType-meta.xml
<RecordType>
    <fullName>Voice_of_Customer</fullName>
    <active>true</active>
    <description>Voice of Customer</description>
    <label>Voice of Customer</label>
</RecordType>