force-app/main/default/objects/CampaignFeedback__c/listViews/All_Campaign_Feedback.listView-meta.xml
<ListView>
    <fullName>All_Campaign_Feedback</fullName>
    <columns>NAME</columns>
    <columns>Legal_Entity_Name__c</columns>
    <columns>CampaignName__c</columns>
    <columns>Contact__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>DateofCommunication__c</columns>
    <columns>MerchantadoptionofSODtoATL__c</columns>
    <columns>Whatisthesplit__c</columns>
    <columns>Reasonfordecision__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Campaign Feedback</label>
    <language>en_US</language>
</ListView>