force-app/main/default/objects/CampaignFeedback__c/listViews/My_Open_Campaign_Feedbacks.listView-meta.xml
<ListView>
    <fullName>My_Open_Campaign_Feedbacks</fullName>
    <columns>NAME</columns>
    <columns>Legal_Entity_Name__c</columns>
    <columns>Contact__c</columns>
    <columns>CampaignName__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>Status__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Completed</value>
    </filters>
    <label>My Open Campaign Feedbacks</label>
    <language>en_US</language>
</ListView>